Adding asr_flir_ptu_controller, asr_flir_ptu_driver, asr_gazebo_models, asr_mild_calibration_tool, asr_mild_kinematic_chain, asr_robot_model_services, asr_sick_lms_400 to documentation index for distro

--- a/kinetic/distribution.yaml
+++ b/kinetic/distribution.yaml
@@ -180,10 +180,25 @@ repositories:
       url: https://github.com/AutonomyLab/ardrone_autonomy.git
       version: indigo-devel
     status: developed
+  asr_flir_ptu_controller:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_flir_ptu_controller.git
+      version: master
+  asr_flir_ptu_driver:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_flir_ptu_driver.git
+      version: master
   asr_ftc_local_planner:
     doc:
       type: git
       url: https://github.com/asr-ros/asr_ftc_local_planner.git
+      version: master
+  asr_gazebo_models:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_gazebo_models.git
       version: master
   asr_ivt:
     doc:
@@ -215,6 +230,16 @@ repositories:
       type: git
       url: https://github.com/asr-ros/asr_mild_base_launch_files.git
       version: master
+  asr_mild_calibration_tool:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_mild_calibration_tool.git
+      version: master
+  asr_mild_kinematic_chain:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_mild_kinematic_chain.git
+      version: master
   asr_mild_navigation:
     doc:
       type: git
@@ -235,10 +260,20 @@ repositories:
       type: git
       url: https://github.com/asr-ros/asr_rapidxml.git
       version: master
+  asr_robot_model_services:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_robot_model_services.git
+      version: master
   asr_ros_uri:
     doc:
       type: git
       url: https://github.com/asr-ros/asr_ros_uri.git
+      version: master
+  asr_sick_lms_400:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_sick_lms_400.git
       version: master
   asr_xsd2cpp:
     doc:
