Adding packages to documentation index for kinetic and indigo (#15109)
* Adding asr_rapidxml to documentation index for indigo and kinetic

* Adding asr_ros_uri to documentation index for indigo and kinetic

* Adding asr_ivt and asr_ivt_bridge to documentation index for indigo and kinetic

* Adding asr_xsd2cpp to documentation index for indigo and kinetic

* Adding asr_fake_object_recognition, asr_halcon_bridge, asr_object_databse and asr_resources_for_vision to documentation index for indigo and kinetic

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -450,6 +450,11 @@ repositories:
       type: git
       url: https://github.com/ethz-asl/asctec_mav_framework.git
       version: master
+  asr_fake_object_recognition:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_fake_object_recognition.git
+      version: master
   asr_flir_ptu_controller:
     doc:
       type: git
@@ -469,6 +474,11 @@ repositories:
     doc:
       type: git
       url: https://github.com/asr-ros/asr_gazebo_models.git
+      version: master
+  asr_halcon_bridge:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_halcon_bridge.git
       version: master
   asr_ivt:
     doc:
@@ -525,10 +535,20 @@ repositories:
       type: git
       url: https://github.com/asr-ros/asr_navfn.git
       version: master
+  asr_object_database:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_object_database.git
+      version: master
   asr_rapidxml:
     doc:
       type: git
       url: https://github.com/asr-ros/asr_rapidxml.git
+      version: master
+  asr_resources_for_vision:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_resources_for_vision.git
       version: master
   asr_robot_model_services:
     doc:
