Adding packages to documentation index for indigo and kinetic (#15110)
* Adding asr_rapidxml to documentation index for indigo and kinetic

* Adding asr_ros_uri to documentation index for indigo and kinetic

* Adding asr_ivt and asr_ivt_bridge to documentation index for indigo and kinetic

* Adding asr_xsd2cpp to documentation index for indigo and kinetic

* Adding asr_fake_object_recognition, asr_halcon_bridge, asr_object_databse and asr_resources_for_vision to documentation index for indigo and kinetic

* Adding asr_aruco_marker_recognition and asr_descriptor_surface_based_recognition to documentation index for indigo and kinetic

--- a/indigo/distribution.yaml
+++ b/indigo/distribution.yaml
@@ -450,6 +450,16 @@ repositories:
       type: git
       url: https://github.com/ethz-asl/asctec_mav_framework.git
       version: master
+  asr_aruco_marker_recognition:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_aruco_marker_recognition.git
+      version: master
+  asr_descriptor_surface_based_recognition:
+    doc:
+      type: git
+      url: https://github.com/asr-ros/asr_descriptor_surface_based_recognition.git
+      version: master
   asr_fake_object_recognition:
     doc:
       type: git
