--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -637,6 +637,9 @@ f2c:
     portage:
       packages: [dev-lang/f2c]
   ubuntu: [f2c, libf2c2, libf2c2-dev]
+fakeroot:
+  debian: [fakeroot]
+  ubuntu: [fakeroot]
 fcgi:
   arch: [fcgi, mod_fcgid, spawn-fcgi]
   debian: [libfcgi-dev, libapache2-mod-fastcgi, spawn-fcgi]
