collada-dom is in ::gentoo (#15101)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -425,7 +425,7 @@ collada-dom:
   fedora: [collada-dom-devel]
   gentoo:
     portage:
-      packages: [media-libs/collada-dom]
+      packages: [dev-libs/collada-dom]
   macports: [collada-dom]
   slackware: [collada-dom]
   ubuntu:
