dev-util/eclipse-sdk-bin was removed from gentoo (#15091)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -575,7 +575,7 @@ eclipse:
   fedora: [eclipse-pde, eclipse-emf]
   gentoo:
     portage:
-      packages: [dev-java/ant-eclipse-ecj, dev-util/eclipse-sdk-bin, dev-java/eclipse-ecj]
+      packages: [dev-java/ant-eclipse-ecj, dev-java/eclipse-ecj]
   ubuntu:
     karmic: [eclipse, eclipse-platform, eclipse-rcp, eclipse-pde]
     lucid: [eclipse, eclipse-platform, eclipse-rcp, eclipse-pde]
