jansson dependency for gentoo (#15120)

--- a/rosdep/base.yaml
+++ b/rosdep/base.yaml
@@ -1827,6 +1827,7 @@ libjackson-json-java:
   ubuntu: [libjackson-json-java]
 libjansson-dev:
   debian: [libjansson-dev]
+  gentoo: [dev-libs/jansson]
   ubuntu: [libjansson-dev]
 libjaxp1.3-java:
   ubuntu:
