--- a/jade/distribution.yaml
+++ b/jade/distribution.yaml
@@ -2080,6 +2080,16 @@ repositories:
       url: https://github.com/ros-industrial/industrial_core.git
       version: jade
     status: maintained
+  innok_heros_driver:
+    doc:
+      type: git
+      url: https://github.com/innokrobotics/innok_heros_driver.git
+      version: jade
+    source:
+      type: git
+      url: https://github.com/innokrobotics/innok_heros_driver.git
+      version: jade
+    status: maintained
   interactive_marker_proxy:
     doc:
       type: git
